[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/shears/shears.png" type="Texture" id=1]
[ext_resource path="res://scenes/shears/shears.gd" type="Script" id=2]
[ext_resource path="res://scenes/shears/shears.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 4.6453

[node name="Shears" type="Node2D"]
script = ExtResource( 2 )

[node name="OpenSprite" type="Sprite" parent="."]
texture = SubResource( 1 )
offset = Vector2( 0, 0.5 )

[node name="ClosedSprite" type="Sprite" parent="."]
visible = false
texture = SubResource( 2 )
offset = Vector2( 0, 0.5 )

[node name="ClosedTimer" type="Timer" parent="."]
wait_time = 0.106
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.537
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.889, 0 )
shape = SubResource( 3 )

[connection signal="timeout" from="ClosedTimer" to="." method="_on_ClosedTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_Timer_timeout"]
